fixed home page spacing

--- a/styles/home.css
+++ b/styles/home.css
@@ -161,9 +161,8 @@ video {
 .firstSection {
     display: flex;
     flex-direction: column;
-    /*justify-content: space-around;*/
     align-items: center;
-    height: 1400px;
+    height: 1650px;
     width: 100%;
 }
 
@@ -174,7 +173,8 @@ video {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    /*padding-bottom: 150px;*/
+    margin-bottom: 30px;
+    margin-top: 80px;
 }
 
 .whiteWords h3 {
@@ -280,10 +280,12 @@ video {
 }
 
 .worldImage {
+    margin-top: 70px;
     background: url('../images/worldImage.png') no-repeat center;
     background-size: cover;
     width: 100%;
     height: 700px;
+    margin-bottom: 100px;
 }
 
 .yellowOperations {
@@ -337,7 +339,7 @@ video {
 
 .aroundTheWorld {
     width: 100%;
-    height: 1000px;
+    height: 1100px;
     color: white;
     display: flex;
     justify-content: center;
@@ -355,7 +357,7 @@ video {
     line-height: 44px;
     text-align: center;
     padding-top: 24px;
-    margin-top: 120px;
+    margin-top: 80px;
 }
 
 .homeImageBox {
@@ -466,16 +468,17 @@ video {
 /*---------------------------*/
 
 .newsBox {
+    margin-top: 30px;
     width: 90%;
     display: flex;
     justify-content: space-between;
-    margin-bottom: -70px;
+    /*margin-bottom: -70px;*/
     align-items: center;
 }
 
 .newsImages img {
     width: 150px;
-    height: 100px;
+    height: 110px;
     background-size: cover;
     
 }
